# cxpr

./: .gitignore  CMakeLists.txt  README.md  array_utils.h  cxpr.h  cxpr_algo.h  fixed_string.h  static_map.h  static_pair.h  tuple_utils.h  type_hash.h
cxpr/: array_utils.h  cxpr.h  cxpr_algo.h  fixed_string.h  fixed_vector.h  optional_ex.h  static_map.h  static_pair.h  tuple_utils.h  type_hash.h  variadic_utils.h  variant_utils.h
tests/: CMakeLists.txt  static_map_tests.cpp  static_string_test.cpp  tuple_tests.cpp  type_hash_test.cpp
